ENHANCEMENT/FIX: Using Sequence_Controller class for E20R Sequences ENHANCEMENT/FIX: Disable loading TouchPunch jQuery library ENHANCEMENT/FIX: Error when using CodeTabs library in certain situations ENHANCEMENT/FIX: Could sometimes pass check for intake interview w/o a completed interview ENHANCEMENT/FIX: Size of input field on Measurement page was inconsistent between themes ENHANCEMENT/FIX: Would wrap text/radio field incorrectly on dashboard page

--- a/css/e20r-tracker.css
+++ b/css/e20r-tracker.css
@@ -732,6 +732,7 @@ div#inner-tabs div.inner-tab {
     display: block;
     float: left;
     margin-bottom: 10px;
+    max-width: 120px;
 }
 .measurement-field-container.active {
     background: rgba(255, 184, 77, 0.3);
@@ -1458,7 +1459,6 @@ td.e20r-group-header {
     margin-left: 20px;
 }
 #e20r-daily-action-container #e20r-daily-action-canvas fieldset.did-you ul > li label {
-    float: left;
     margin-left: 4px;
 }
 #e20r-daily-action-container #e20r-daily-action-canvas fieldset.did-you ul > li input[type=radio] {
